Fix caret SVG alignment and z-index stacking for dropdown elements.

--- a/themes/kurtpaullevy-understrap-child/css/child-theme.css
+++ b/themes/kurtpaullevy-understrap-child/css/child-theme.css
@@ -21817,7 +21817,7 @@ body.home .footer-intro-text.fade-in {
 .category-dropdown .category-dropdown__menu-btn {
   width: 100%;
   padding: 15px 20px;
-  z-index: 3;
+  z-index: 20;
   position: relative;
 }
 
@@ -21826,20 +21826,17 @@ body.home .footer-intro-text.fade-in {
   line-height: 1;
 }
 
-.category-dropdown .category-dropdown__menu-btn .caret-icon {
+.category-dropdown .category-dropdown__menu-btn .icon-caret-down {
   position: absolute;
   right: 20px;
   top: 50%;
-  transform: translateY(-50%);
-}
-
-.category-dropdown .category-dropdown__menu-btn .caret-icon svg {
+  transform: translateY(calc(-50% + 3px));
   transition: transform 0.3s ease;
   transform-origin: center;
 }
 
-.category-dropdown .category-dropdown__menu-btn .caret-icon.rotated svg {
-  transform: rotate(180deg);
+.category-dropdown .category-dropdown__menu-btn .icon-caret-down.rotated {
+  transform: translateY(calc(-50% + 3px)) rotate(180deg);
 }
 
 .category-dropdown .category-dropdown__menu-btn > span {
@@ -21880,7 +21877,7 @@ body.home .footer-intro-text.fade-in {
   position: absolute;
   top: 100%;
   left: 0;
-  z-index: 2;
+  z-index: 10;
   width: 100%;
   overflow: hidden;
   max-height: 0;
@@ -22055,14 +22052,6 @@ body:is(.blog) .category-dropdown {
 
 .gallery-lightbox__meta {
   text-align: center;
-}
-
-.gallery-lightbox__btn--prev .caret-icon svg {
-  rotate: 90deg;
-}
-
-.gallery-lightbox__btn--next .caret-icon svg {
-  rotate: -90deg;
 }
 
 @media only screen and (min-width: 1184px) {
